cfn_benchmark/cfn_templates/matdue__aws-cf-templates/rds/postgresql.yaml
# Inspired by http://www.stojanveselinovski.com/blog/2016/01/12/simple-postgresql-rds-cloudformation-template/
AWSTemplateFormatVersion: '2010-09-09'
Description: 'PostgreSQL RDS Template, public accessible for Google Data Studio only'
Metadata:
  'AWS::CloudFormation::Interface':
    ParameterGroups:
      - Label:
          default: 'Parent Stacks'
        Parameters:
          - ParentVPCStack
      - Label:
          default: 'RDS Parameters'
        Parameters:
          - DBName
          - DBUsername
          - DBPassword
          - DBClass
          - DBAllocatedStorage
          - DBStorageType
          - DBBackupRetentionPeriod

Parameters:
  ParentVPCStack:
    Description: 'Stack name of parent VPC stack based on vpc/vpc-*azs.yaml template.'
    Type: String
  ParentBatchStack:
    Description: 'Stack name of parent AWS Batch stack'
    Type: String
  DBName:
    Description: 'The database name'
    Type: String
    Default: 'pgdb'
    MinLength: 1
    MaxLength: 8
    AllowedPattern: '[a-zA-Z][a-zA-Z0-9]*'
    ConstraintDescription: 'must begin with a letter and contain only alphanumeric characters.'
  DBUsername:
    Description: 'The database admin account username'
    Type: String
    Default: 'root'
    NoEcho: true
  DBClass:
    Description: 'Database instance class'
    Type: String
    Default: 'db.t3.micro'
  DBAllocatedStorage:
    Description: 'The size of the database (Gb)'
    Type: Number
    Default: 606
    MinValue: 20
    MaxValue: 6144
    ConstraintDescription: 'must be between 20+'
  DBMaxAllocatedStorage:
    Description: The upper limit to which Amazon RDS can automatically scale the storage of the DB instance.
    Type: Number
    Default: 1000
  DBStorageType:
    Description: 'The storage type'
    Type: String
    Default: 'gp2'
    AllowedValues: ['standard', 'gp2']
    ConstraintDescription: 'must select a valid database storage type.'
  DBBackupRetentionPeriod:
    Description: 'The number of days for which automated backups are retained. 0 disabled automated backups.'
    Type: String
    Default: '7'
    AllowedValues: ['0', '1', '7']
    ConstraintDescription: 'must select a valid backup retention period.'
  DBMasterUserPasswordParameter:
    Description: The name of the parameter in AWS System Manager's Parameter Store containing the master password
    Type: String
  AllowPublicAccess:
    Description: 'Allow access from everywhere'
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  AllowTableauAccess:
    Description: 'Allow access from Tableau IPs'
    Type: String
    Default: false
    AllowedValues:
      - true
      - false
  Project:
    Description: The project name.
    Type: String

Conditions:
  ShallAllowPublicAccess: !Equals [!Ref AllowPublicAccess, 'true']
  ShallAllowTableauAccess: !Equals [!Ref AllowTableauAccess, 'true']

Resources:
  DBSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: 'Access (restricted to Google Data Studio and probably more)'
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      SecurityGroupIngress:
        # Restrict access to Google Data Studio only (https://support.google.com/datastudio/answer/7288010?hl=de)
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 64.18.0.0/20
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 64.233.160.0/19
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 66.102.0.0/20
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 66.249.80.0/20
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 72.14.192.0/18
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 74.125.0.0/16
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 108.177.8.0/21
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 173.194.0.0/16
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 207.126.144.0/20
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 209.85.128.0/17
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 216.58.192.0/19
        - IpProtocol: tcp
          FromPort: 5432
          ToPort: 5432
          CidrIp: 216.239.32.0/19
        - !If
          - ShallAllowPublicAccess
          - IpProtocol: tcp
            FromPort: 5432
            ToPort: 5432
            CidrIp: '0.0.0.0/0'
          - !Ref 'AWS::NoValue'
        - !If
          - ShallAllowTableauAccess
          - IpProtocol: tcp
            FromPort: 5432
            ToPort: 5432
            CidrIp: 34.246.62.141/32
          - !Ref 'AWS::NoValue'
        - !If
          - ShallAllowTableauAccess
          - IpProtocol: tcp
            FromPort: 5432
            ToPort: 5432
            CidrIp: 34.246.62.203/32
          - !Ref 'AWS::NoValue'

  DBInstanceSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group to allow database access
      VpcId:
        'Fn::ImportValue': !Sub '${ParentVPCStack}-VPC'
      Tags:
        - Key: Project
          Value: !Ref Project

  DBInstanceSecurityGroupSelfIngress:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !Ref DBInstanceSecurityGroup
      IpProtocol: -1
      SourceSecurityGroupId: !Ref DBInstanceSecurityGroup

  DBEnhancedMonitoringRole:
    Type: 'AWS::IAM::Role'
    Properties:
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: monitoring.rds.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonRDSEnhancedMonitoringRole

  DBSubnetGroup:
    Type: 'AWS::RDS::DBSubnetGroup'
    Properties:
      DBSubnetGroupDescription: 'DB Public Subnet'
      SubnetIds: !Split
        - ','
        - 'Fn::ImportValue': !Sub '${ParentVPCStack}-SubnetsPublic'

  PostgresDBParameterGroup:
    Type: 'AWS::RDS::DBParameterGroup'
    Properties:
      Description: Customized parameter group for PostgreSQL databases
      Family: postgres11
      Parameters:
        log_statement: ddl  # Logs all data definition language (DDL) statements such as CREATE, ALTER, and DROP
        log_min_duration_statement: 0  # Logs all queries that take longer than 1 second
        work_mem: 262144  # Prevents using disc when sorting large data; reduce if running out of memory; default is 8192

  PostgresDB:
    Type: 'AWS::RDS::DBInstance'
    Properties:
      DBName: !Ref DBName
      DBParameterGroupName: !Ref PostgresDBParameterGroup
      AllocatedStorage: !Ref DBAllocatedStorage
      DBInstanceClass: !Ref DBClass
      EnableCloudwatchLogsExports:
        - postgresql
        - upgrade
      Engine: 'postgres'
      EngineVersion: '11.5'
      StorageType: !Ref DBStorageType
      BackupRetentionPeriod: !Ref DBBackupRetentionPeriod
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Sub '{{resolve:ssm-secure:${DBMasterUserPasswordParameter}:1}}'
      MaxAllocatedStorage: !Ref DBMaxAllocatedStorage
      DBSubnetGroupName: !Ref DBSubnetGroup
      PubliclyAccessible: true
      VPCSecurityGroups:
        - !GetAtt DBSecurityGroup.GroupId
        - !GetAtt DBInstanceSecurityGroup.GroupId
        - 'Fn::ImportValue': !Sub '${ParentBatchStack}-InstanceSecurityGroupId'
      MonitoringInterval: 15
      MonitoringRoleArn: !GetAtt DBEnhancedMonitoringRole.Arn
      PerformanceInsightsRetentionPeriod: 731
      PreferredBackupWindow: '05:39-06:09'
      PreferredMaintenanceWindow: 'sun:00:00-sun:01:00'
      StorageEncrypted: true
      MultiAZ: true
      EnablePerformanceInsights: true
      Tags:
        - Key: Project
          Value: !Ref Project

Outputs:
  JDBCConnectionString:
    Description: 'JDBC connection string for database (without database name!)'
    Value: !Join
      - ''
      - - 'jdbc:postgresql://'
        - !GetAtt PostgresDB.Endpoint.Address
        - ':'
        - !GetAtt PostgresDB.Endpoint.Port
        - '/'
    Export:
      Name: !Sub '${AWS::StackName}-JDBCConnectionString'
  Hostname:
    Description: Hostname of database
    Value: !GetAtt PostgresDB.Endpoint.Address
    Export:
      Name: !Sub '${AWS::StackName}-Hostname'
  Port:
    Description: Port of database
    Value: !GetAtt PostgresDB.Endpoint.Port
    Export:
      Name: !Sub '${AWS::StackName}-Port'
  DBName:
    Description: Database name
    Value: !Ref DBName
  MasterUsername:
    Description: Master username
    Value: !Ref DBUsername
  DBInstanceSecurityGroupId:
    Description: Security group to access database
    Value: !GetAtt DBInstanceSecurityGroup.GroupId
    Export:
      Name: !Sub '${AWS::StackName}-DBInstanceSecurityGroupId'
